fix #1 Hamburger icon in navbar is not collapsing right for mobile devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,7 @@ h3 ~ .site-nav {
     right: 0;
     padding: 5px 10px;
     background-color: #ebeef2;
-
+    z-index: 1;
     @include media-query($on-palm) {
         background: none;
         padding: 0;
